Add other user profile page and refactor for book list component
